// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Componenti/Dropdown Esempi 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="dropdown"
      onKeyDown={[Function]}
    >
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="btn btn-dropdown dropdown-toggle"
        onClick={[Function]}
      >
        Apri dropdown
      </button>
      <div
        aria-hidden={true}
        className="dropdown-menu"
        role="menu"
        tabIndex="-1"
      >
        <div
          className="link-list-wrapper"
        >
          <ul
            className="link-list"
          >
            <li>
              <a
                className="list-item"
              >
                Azione 1
              </a>
            </li>
            <li>
              <a
                className="list-item"
              >
                Azione 2
              </a>
            </li>
            <li>
              <a
                className="list-item"
              >
                Azione 3
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Dropdown Link 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="dropdown"
      onKeyDown={[Function]}
    >
      <span
        aria-expanded={false}
        aria-haspopup={true}
        className="btn btn-dropdown dropdown-toggle"
        onClick={[Function]}
      >
        Apri dropdown
      </span>
      <div
        aria-hidden={true}
        className="dropdown-menu"
        role="menu"
        tabIndex="-1"
      >
        <div
          className="link-list-wrapper"
        >
          <ul
            className="link-list"
          >
            <li>
              <a
                className="list-item"
              >
                Azione 1
              </a>
            </li>
            <li>
              <a
                className="list-item"
              >
                Azione 2
              </a>
            </li>
            <li>
              <a
                className="list-item"
              >
                Azione 3
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Dropdown Variante Bottoni 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <section>
      <div
        className="mr-3 btn-group"
        onKeyDown={[Function]}
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          aria-label={null}
          className="dropdown-toggle btn btn-primary"
          onClick={[Function]}
          type="button"
        >
          Apri dropdown
        </button>
        <div
          aria-hidden={true}
          className="dropdown-menu"
          role="menu"
          tabIndex="-1"
        >
          <div
            className="link-list-wrapper"
          >
            <ul
              className="link-list"
            >
              <li>
                <a
                  className="list-item"
                >
                  Azione 1
                </a>
              </li>
              <li>
                <a
                  className="list-item"
                >
                  Azione 2
                </a>
              </li>
              <li>
                <a
                  className="list-item"
                >
                  Azione 3
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        className="mr-3 btn-group"
        onKeyDown={[Function]}
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          aria-label={null}
          className="dropdown-toggle btn btn-secondary"
          onClick={[Function]}
          type="button"
        >
          Apri dropdown
        </button>
        <div
          aria-hidden={true}
          className="dropdown-menu"
          role="menu"
          tabIndex="-1"
        >
          <div
            className="link-list-wrapper"
          >
            <ul
              className="link-list"
            >
              <li>
                <a
                  className="list-item"
                >
                  Azione 1
                </a>
              </li>
              <li>
                <a
                  className="list-item"
                >
                  Azione 2
                </a>
              </li>
              <li>
                <a
                  className="list-item"
                >
                  Azione 3
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        className="mr-3 btn-group"
        onKeyDown={[Function]}
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          aria-label={null}
          className="dropdown-toggle btn btn-danger"
          onClick={[Function]}
          type="button"
        >
          Apri dropdown
        </button>
        <div
          aria-hidden={true}
          className="dropdown-menu"
          role="menu"
          tabIndex="-1"
        >
          <div
            className="link-list-wrapper"
          >
            <ul
              className="link-list"
            >
              <li>
                <a
                  className="list-item"
                >
                  Azione 1
                </a>
              </li>
              <li>
                <a
                  className="list-item"
                >
                  Azione 2
                </a>
              </li>
              <li>
                <a
                  className="list-item"
                >
                  Azione 3
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </section>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Dropdown.Dropdown menu Menu con voci large 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="clearfix"
    >
      <div
        aria-hidden={true}
        className="d-block position-relative dropdown-menu"
        isOpen={true}
        role="menu"
        tabIndex="-1"
      >
        <div
          className="link-list-wrapper"
        >
          <ul
            className="link-list"
          >
            <li>
              <a
                className="size list-item"
              >
                <span>
                  Azione 1
                </span>
              </a>
            </li>
            <li>
              <a
                className="size list-item"
              >
                <span>
                  Azione 2
                </span>
              </a>
            </li>
            <li>
              <a
                className="size list-item"
              >
                <span>
                  Azione 3
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Dropdown.Dropdown menu Menù dark 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="clearfix"
    >
      <div
        aria-hidden={true}
        className="d-block dark position-relative dropdown-menu"
        isOpen={true}
        role="menu"
        tabIndex="-1"
      >
        <div
          className="link-list-wrapper"
        >
          <ul
            className="link-list"
          >
            <li>
              <h3
                className="header list-item"
              >
                Header
              </h3>
            </li>
            <li>
              <a
                className="right-icon active list-item"
              >
                <span>
                  Azione 1 (attivo)
                </span>
                <svg
                  className="icon right icon-light icon-sm sm"
                  style={
                    Object {
                      "ariaHidden": true,
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2a10 10 0 1010 10A10 10 0 0012 2zm0 19a9 9 0 119-9 9 9 0 01-9 9zm-.7-15h1.5v2h-1.5zm0 3h1.5v9h-1.5z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </a>
            </li>
            <li>
              <a
                className="right-icon list-item"
              >
                <span>
                  Azione 2
                </span>
                <svg
                  className="icon right icon-light icon-sm sm"
                  style={
                    Object {
                      "ariaHidden": true,
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2a10 10 0 1010 10A10 10 0 0012 2zm0 19a9 9 0 119-9 9 9 0 01-9 9zm-.7-15h1.5v2h-1.5zm0 3h1.5v9h-1.5z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </a>
            </li>
            <li>
              <a
                className="right-icon list-item"
              >
                <span>
                  Azione 3
                </span>
                <svg
                  className="icon right icon-light icon-sm sm"
                  style={
                    Object {
                      "ariaHidden": true,
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2a10 10 0 1010 10A10 10 0 0012 2zm0 19a9 9 0 119-9 9 9 0 01-9 9zm-.7-15h1.5v2h-1.5zm0 3h1.5v9h-1.5z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </a>
            </li>
            <li>
              <span
                className="divider list-item"
              />
            </li>
            <li>
              <a
                className="right-icon list-item"
              >
                <span>
                  Azione 4
                </span>
                <svg
                  className="icon right icon-light icon-sm sm"
                  style={
                    Object {
                      "ariaHidden": true,
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2a10 10 0 1010 10A10 10 0 0012 2zm0 19a9 9 0 119-9 9 9 0 01-9 9zm-.7-15h1.5v2h-1.5zm0 3h1.5v9h-1.5z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </a>
            </li>
            <li>
              <a
                className="right-icon disabled list-item"
                onClick={[Function]}
              >
                <span>
                  Azione 5 (disabilitato)
                </span>
                <svg
                  className="icon right icon-light icon-sm sm"
                  style={
                    Object {
                      "ariaHidden": true,
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2a10 10 0 1010 10A10 10 0 0012 2zm0 19a9 9 0 119-9 9 9 0 01-9 9zm-.7-15h1.5v2h-1.5zm0 3h1.5v9h-1.5z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Dropdown.Dropdown menu Menù full width 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="clearfix"
    >
      <div
        aria-hidden={true}
        className="d-block full-width position-relative dropdown-menu"
        isOpen={true}
        role="menu"
        tabIndex="-1"
      >
        <div
          className="link-list-wrapper"
        >
          <ul
            className="link-list"
          >
            <li>
              <a
                className="size list-item"
              >
                <span>
                  Azione 1
                </span>
              </a>
            </li>
            <li>
              <a
                className="size list-item"
              >
                <span>
                  Azione 2
                </span>
              </a>
            </li>
            <li>
              <a
                className="size list-item"
              >
                <span>
                  Azione 3
                </span>
              </a>
            </li>
            <li>
              <a
                className="size list-item"
              >
                <span>
                  Azione 4
                </span>
              </a>
            </li>
            <li>
              <a
                className="size list-item"
              >
                <span>
                  Azione 5
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Dropdown.Dropdown menu Menù headers e separatori 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="clearfix"
    >
      <div
        aria-hidden={true}
        className="d-block position-relative dropdown-menu"
        isOpen={true}
        role="menu"
        tabIndex="-1"
      >
        <div
          className="link-list-wrapper"
        >
          <ul
            className="link-list"
          >
            <li>
              <h3
                className="header list-item"
              >
                Header
              </h3>
            </li>
            <li>
              <a
                className="list-item"
              >
                <span>
                  Azione 1
                </span>
              </a>
            </li>
            <li>
              <a
                className="list-item"
              >
                <span>
                  Azione 2
                </span>
              </a>
            </li>
            <li>
              <a
                className="list-item"
              >
                <span>
                  Azione 3
                </span>
              </a>
            </li>
            <li>
              <span
                className="divider list-item"
              />
            </li>
            <li>
              <a
                className="list-item"
              >
                <span>
                  Azione 4
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Dropdown.Dropdown menu Menù icona a destra 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="clearfix"
    >
      <div
        aria-hidden={true}
        className="d-block position-relative dropdown-menu"
        isOpen={true}
        role="menu"
        tabIndex="-1"
      >
        <div
          className="link-list-wrapper"
        >
          <ul
            className="link-list"
          >
            <li>
              <a
                className="right-icon list-item"
              >
                <span>
                  Azione 1
                </span>
                <svg
                  className="icon right icon-primary icon-sm sm"
                  style={
                    Object {
                      "ariaHidden": true,
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2a10 10 0 1010 10A10 10 0 0012 2zm0 19a9 9 0 119-9 9 9 0 01-9 9zm-.7-15h1.5v2h-1.5zm0 3h1.5v9h-1.5z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </a>
            </li>
            <li>
              <a
                className="right-icon list-item"
              >
                <span>
                  Azione 2
                </span>
                <svg
                  className="icon right icon-primary icon-sm sm"
                  style={
                    Object {
                      "ariaHidden": true,
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2a10 10 0 1010 10A10 10 0 0012 2zm0 19a9 9 0 119-9 9 9 0 01-9 9zm-.7-15h1.5v2h-1.5zm0 3h1.5v9h-1.5z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </a>
            </li>
            <li>
              <a
                className="right-icon list-item"
              >
                <span>
                  Azione 3
                </span>
                <svg
                  className="icon right icon-primary icon-sm sm"
                  style={
                    Object {
                      "ariaHidden": true,
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2a10 10 0 1010 10A10 10 0 0012 2zm0 19a9 9 0 119-9 9 9 0 01-9 9zm-.7-15h1.5v2h-1.5zm0 3h1.5v9h-1.5z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Dropdown.Dropdown menu Menù icona a sinistra 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="clearfix"
    >
      <div
        aria-hidden={true}
        className="d-block position-relative dropdown-menu"
        isOpen={true}
        role="menu"
        tabIndex="-1"
      >
        <div
          className="link-list-wrapper"
        >
          <ul
            className="link-list"
          >
            <li>
              <a
                className="left-icon list-item"
              >
                <svg
                  className="icon left icon-primary icon-sm sm"
                  style={
                    Object {
                      "ariaHidden": true,
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2a10 10 0 1010 10A10 10 0 0012 2zm0 19a9 9 0 119-9 9 9 0 01-9 9zm-.7-15h1.5v2h-1.5zm0 3h1.5v9h-1.5z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
                <span>
                  Azione 1
                </span>
              </a>
            </li>
            <li>
              <a
                className="left-icon list-item"
              >
                <svg
                  className="icon left icon-primary icon-sm sm"
                  style={
                    Object {
                      "ariaHidden": true,
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2a10 10 0 1010 10A10 10 0 0012 2zm0 19a9 9 0 119-9 9 9 0 01-9 9zm-.7-15h1.5v2h-1.5zm0 3h1.5v9h-1.5z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
                <span>
                  Azione 2
                </span>
              </a>
            </li>
            <li>
              <a
                className="left-icon list-item"
              >
                <svg
                  className="icon left icon-primary icon-sm sm"
                  style={
                    Object {
                      "ariaHidden": true,
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2a10 10 0 1010 10A10 10 0 0012 2zm0 19a9 9 0 119-9 9 9 0 01-9 9zm-.7-15h1.5v2h-1.5zm0 3h1.5v9h-1.5z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
                <span>
                  Azione 3
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Dropdown.Dropdown menu Menù voci attive 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="clearfix"
    >
      <div
        aria-hidden={true}
        className="d-block position-relative dropdown-menu"
        isOpen={true}
        role="menu"
        tabIndex="-1"
      >
        <div
          className="link-list-wrapper"
        >
          <ul
            className="link-list"
          >
            <li>
              <a
                className="active list-item"
              >
                <span>
                  Azione 1
                </span>
              </a>
            </li>
            <li>
              <a
                className="list-item"
              >
                <span>
                  Azione 2
                </span>
              </a>
            </li>
            <li>
              <a
                className="list-item"
              >
                <span>
                  Azione 3
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Dropdown.Dropdown menu Menù voci disabilitate 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="clearfix"
    >
      <div
        aria-hidden={true}
        className="d-block position-relative dropdown-menu"
        isOpen={true}
        role="menu"
        tabIndex="-1"
      >
        <div
          className="link-list-wrapper"
        >
          <ul
            className="link-list"
          >
            <li>
              <a
                className="list-item"
              >
                <span>
                  Azione 1
                </span>
              </a>
            </li>
            <li>
              <a
                className="disabled list-item"
                onClick={[Function]}
              >
                <span>
                  Azione 2
                </span>
              </a>
            </li>
            <li>
              <a
                className="list-item"
              >
                <span>
                  Azione 3
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
